--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,12 @@
   "name": "App Contable",
   "short_name": "Contable",
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#ffffff",
   "theme_color": "#0d6efd",
+  "orientation": "portrait",
   "icons": [
-    {
-      "src": "img/app-icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "img/app-icon.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "img/app-icon.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "img/app-icon.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
